--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -5,28 +5,28 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F5F1EB",
-  "theme_color": "#E07A3E",
+  "theme_color": "#F97316",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
   "categories": ["lifestyle", "personal", "journey", "adventure", "blog"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icon-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icon-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable any"
     },
     {
-      "src": "/apple-touch-icon.png",
+      "src": "/apple-touch-icon.svg",
       "sizes": "180x180",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ],
   "screenshots": [
