--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.44.0",
     "tsx": "^4.20.4",
     "typescript": "5.6.3",
     "vite": "^5.4.19"
