Add Shikara boat tours destination with per-boat pricing and complete sitemap improvements
- Added Shikara boat tours on Astamidi River with authentic Kerala backwater experience
- Updated pricing to per-boat (₹1,200-3,000) instead of per-person for 7-14 people capacity
- Added comprehensive destination details, highlights, and activities
- Completed sitemap styling with XSL stylesheet for news sitemap
- Fixed canonical domain consistency across all sitemaps and robots.txt
- Updated Vercel routing to serve .xsl files properly in production

--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
       "dest": "/assets/$1"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|webp|mp4|webm|ogg|mp3|wav|flac|aac|map|json|xml|txt|html))",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|webp|mp4|webm|ogg|mp3|wav|flac|aac|map|json|xml|txt|html|xsl))",
       "dest": "/$1"
     },
     {
